--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,14 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
   <title><%= title %></title>
 </head>
 <body>
   <nav>
     <a href="/products" <%- title === 'All Products' ? 'class="active"' : '' %>>Home</a>
     <% if (user) { %>
-      <a href="/carts/cart"	<%- title === 'Your Cart' ? 'class="active"' : '' %>>
-      Cart</a>
+      <div id="carticon">
+        <a href="/carts/cart" <%- title === 'Your Cart' ? 'class="active"' : '' %>><span class="p1 fa-stack fa-2x has-badge" data-count="<%= user.cart.length %>">
+          <!--<i class="p2 fa fa-circle fa-stack-2x"></i>-->
+          <i class="p3 fa fa-shopping-cart fa-stack-1x xfa-inverse" data-count="4b"></i>
+          <!-- <i class="fa fa-shopping-cart" style="font-size:24px"></i> -->
+        </span></a>
+      </div>
+      <!-- <a href="/carts/cart"	<%- title === 'Your Cart' ? 'class="active"' : '' %>>
+      Cart</a> -->
       <a href="/products/new" <%- title === 'Add Product' ? 'class="active"' : '' %>>Add Product</a>
       <a href="/logout">Log Out</a>
     <% } else { %>
