--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -10,33 +10,29 @@
   <%}%>
   </div>
   <!-- <img src="<%= product.pics[0] %>"></div> -->
+  
 <div class ="productdetails">
-<section id="show-page">
-  <div>Name: </div>
-  <div><%= product.name %></div>
-  <div>Price: </div>
-  <div><%= product.price %></div>
-  <div>Gender: </div>
-  <div><%= product.gender %></div>
-  <div>On sale: </div>
-  <div><%= product.onSale ? 'Yes' : 'Nope' %></div>
-  <!-- start images list -->
-  <div>images:</div>
-  <ul>
-    <%- product.images.map(p => 
-      `<li>${p.name} <small>${p.born.toLocaleDateString()}</small></li>`
-    ).join('') %>
-  </ul>
-  <!-- end Images list -->
-</section>
-<% if (user) { %>
-<form id="add-review-form" method="POST" action="/products/user/id=<%= user._id %>&pro=<%= product._id %>">
-  <!-- <label>Review:</label>
-            <textarea name="content"></textarea> -->
+  <div class="p-4">
+  
+    <p class="lead font-weight-bold"><%= product.name %></p>
+    
+    <p class="lead">
+      <span>$<%= product.price %></span>
+    </p>
+  
+  
+    <p class="lead font-weight-bold">Description</p>
+  
+    <p><%- product.description %></p>
+  
+    <% if (user) { %>
+    <form id="add-review-form" method="POST" action="/products/user/id=<%= user._id %>&pro=<%= product._id %>">
+      <input type="submit" value="Add To Cart">
+    </form>
+    <% }%>
+  
+  </div>
 
-  <input type="submit" value="Add To Cart">
-</form>
-<% }%>
 </div>
 </div>
 <br><br>
@@ -56,44 +52,45 @@
   </form>
 <% } %>
 
+
 <% if (product.reviews.length) { %>
-  <table>
-    <thead>
-      <tr>
-        <th>User</th>
-        <th>Date</th>
-        <th>Review</th>
-        <th>Rating</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% let total = 0 %>
-      <% product.reviews.forEach(function(r) { %>
-        <% total += r.rating %>
-        <tr>
-          <td class="review-user"><img src="<%= r.userAvatar %>" alt="Avatar"><%= r.userName %></td>
-          <td><%= r.createdAt.toLocaleDateString() %></td>
-          <td><%= r.content %></td>
-          <td><%= r.rating %></td>
-          <td>
-            <% if (user && user._id.equals(r.user)) { %>
-              <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
-                <button type="submit">X</button>
-              </form>
-            <% } %>
-          </td>
-        </tr>
-      <% }); %>
-      <tr>
-        <td colspan="2"></td>
-        <td><strong><%= (total / product.reviews.length).toFixed(1) %></strong></td>
-      </tr>
-    </tbody>
-  </table>
+  <% let total = 0 %>
+  <% product.reviews.forEach(function(r) { %>
+<div class="card card-inner" style="min-width: 55%;">
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-2">
+        <img src="<%= r.userAvatar %>" class="img img-rounded img-fluid" style="min-width: 100%;"/>
+        <p class="text-secondary text-center"><%= r.createdAt.toLocaleDateString() %></p>
+      </div>
+      <div class="col-md-10">
+        <p><strong><%= r.userName %></strong>
+          <span class="float-right">
+        <%for (let i = 0; i < 5; i++){%>
+          <%if(r.rating <= i){%>
+            <span ><i class="fa fa-star"></i></span>
+            <%}else{%>
+            <span ><i class="text-warning fa fa-star"></i></span>
+
+          <%}%>
+          <%}%>
+          </span>
+        </p>
+        <p><%= r.content %></p>
+        <p>
+          <% if (user && user._id.equals(r.user)) { %>
+          <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
+            <button type="submit" class="float-right btn-danger"> <i class="fa fa-trash"></i> Delete</button>
+            
+          </form>
+          <% } %>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<% }); %>
 <% } else { %>
-  <h5>No Reviews Yet</h5>
+<h5>No Reviews Yet</h5>
 <% } %>
-
-
 <%- include('../partials/footer') %>
